--- a/tuMejorOpcion.web/src/main/webapp/partials/completedPurchase.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/completedPurchase.html
@@ -1,5 +1,11 @@
 <div ng-controller="CompletedPurchaseController as controller">
     
-    Gracias por comprar! {{friend.name}} recibirá tu bono próximamente.
-    
+    <section class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Gracias por comprar! {{friend.name}} recibirá tu bono próximamente.</h2>
+                </div>
+            </div>       
+    </section>
 </div>
