--- a/tuMejorOpcion.web/src/main/webapp/partials/giftCards.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/giftCards.html
@@ -1,19 +1,82 @@
-<div ng-controller="GiftCardsController as giftCardController">   
-
-        <div data-ng-repeat="giftCard in giftCards">
-            
-            <div>
-                <!-- foto -->
-                {{giftCard.shop.name}}
-                <button type="button" ng-click="giftCard.selected = !giftCard.selected">{{giftCard.selected? 'Cerrar':'Comprar'}}</button>
+<div ng-controller="GiftCardsController as giftCardController">           
+    <!-- Team Section -->
+    <section class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Parece que a {{selectedFriend.name}} le gustan cosas de las siguientes tiendas asociadas</h2>
+                </div>
             </div>
- 
-            <div ng-show="giftCard.selected">
+            <div class="row">
                 
-                Valor <input type="text" ng-model="value">
-
-                <button type="button" ng-click="buySelectedGiftCard(giftCard)">Comprar</button>        
+                <div class="col-md-8 col-md-offset-2">
+                    
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th>Tienda</th>
+                                <th>Seleccionar</th>
+                            </tr>
+                        </thead>
+                            
+                        <tbody>   
+                            
+                            <tr data-ng-repeat="giftCard in giftCards">
+                                <div>
+                                    <td>{{giftCard.shop.name}}</td>
+                                    <td ng-hide="giftCard.selected">
+                                        <button type="button" class="btn btn-primary" ng-click="giftCard.selected = true">Comprar</button>
+                                    </td>  
+                                        
+                                    <td ng-show="giftCard.selected">
+                                        <div style="width: 100%; overflow: hidden;">
+                                            <div class="input-group" style="width:400px; float: left;">
+                                                <span class="input-group-addon">$</span>
+                                                <input type="text" ng-model="formData.value" class="form-control">
+                                                <span class="input-group-addon">.00</span>                                   
+                                            </div>
+                                            <div style="margin-left: 25px;">
+                                                <button type="button" class="btn btn-danger" ng-click="giftCard.selected = false">Cerrar</button>  
+                                                <button type="button" class="btn btn-primary" ng-click="buySelectedGiftCard(giftCard)">Comprar</button> 
+                                            </div>
+                                        </div>
+                                        
+                                    </td>                                           
+                                </div>
+                            </tr>
+                           
+                        </tbody>
+                            
+                    </table>
+                </div>
             </div>
-            
+    </section>
+        
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; TuMejorOpcion.com 2014</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
+    </footer>
 </div>
