--- a/tuMejorOpcion.web/src/main/webapp/partials/purchasedGiftCards.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/purchasedGiftCards.html
@@ -1,13 +1,69 @@
-<div ng-controller="PurchasedGiftCardsController as purchasedGiftCardsController" ng-init="init()">
-    
-    <div data-ng-repeat="giftCard in giftCards">
+<div ng-controller="PurchasedGiftCardsController as purchasedGiftCardsController">
+
+    <section class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Estos son los bonos que has comprado</h2>
+                </div>
+            </div>
+            <div class="row">
+                
+                <div class="col-md-8 col-md-offset-2">
+                    
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th>Bono</th>                            
+                            </tr>
+                        </thead>
+                            
+                        <tbody>   
+                            
+                            <tr data-ng-repeat="giftCard in giftCards">
+                                <td>
+                                    <ul style="list-style-type:none">
+                                        <li> Para: {{giftCard.receiver.name}} </li>
+                                        <li> {{giftCard.shop.name}} </li>
+                                        <li> ${{giftCard.value}} </li>
+                                        <li> ID: {{giftCard.id}} </li>
+                                        <li> {{giftCard.dateCreated}} </li>
+                                    </ul>  
+                                </td>
+                            </tr>
+                     
+                        </tbody>
+                            
+                    </table>
+                </div>
+            </div>
+    </section>
         
-        <ul style="list-style-type:none">
-            <li> Para: {{giftCard.receiver}} </li>
-            <li> {{giftCard.shop.name}} </li>
-            <li> ${{giftCard.value}} </li>
-            <li> ID: {{giftCard.id}} </li>
-            <li> {{giftCard.dateCreated}} </li>
-        </ul>  
-    </div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; TuMejorOpcion.com 2014</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
