Cambios parciales para redimir bono

--- a/tuMejorOpcion.web/src/main/webapp/partials/completedPurchase.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/completedPurchase.html
@@ -1,4 +1,4 @@
-<div ng-controller="CompletedPurchaseController as controller">
+<div>
     
     <section class="bg-light-gray">
         <div class="container">
