--- a/tuMejorOpcion.web/src/main/webapp/partials/giftCards.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/giftCards.html
@@ -1,4 +1,4 @@
-<div ng-controller="GiftCardsController as giftCardController">           
+<div>           
     <!-- Team Section -->
     <section class="bg-light-gray">
         <div class="container">
