--- a/tuMejorOpcion.web/src/main/webapp/partials/purchasedGiftCards.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/purchasedGiftCards.html
@@ -1,4 +1,4 @@
-<div ng-controller="PurchasedGiftCardsController as purchasedGiftCardsController">
+<div>
 
     <section class="bg-light-gray">
         <div class="container">
