--- a/tuMejorOpcion.web/src/main/webapp/partials/login.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/login.html
@@ -42,7 +42,7 @@
 
             <div class ="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <form ng-submit="redirectToFriends()" ng-controller="LoginController as controller">
+                    <form ng-submit="redirectToFriends()">
 
                         <fb:login-button data-scope="user_friends, user_likes" data-size="xlarge"
                                          onlogin="" ng-hide="friendsLoaded">
