--- a/tuMejorOpcion.web/src/main/webapp/partials/login.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/login.html
@@ -195,7 +195,7 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
-                    <li><a href="#">Privacy Policy</a>
+                    <li><a href="admin.html">Ingresar como admin</a>
                     </li>
                     <li><a href="#">Terms of Use</a>
                     </li>
