--- a/tuMejorOpcion.web/src/main/webapp/partials/purchasedGiftCards.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/purchasedGiftCards.html
@@ -1,4 +1,25 @@
 <div>
+    
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">TuMejorOpcion</a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#/friends" >Mis Amigos</a></li>
+                    <li class="active"><a href="#/purchasedGiftCards">Bonos Comprados</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <section class="bg-light-gray">
         <div class="container">
@@ -28,6 +49,8 @@
                                         <li> ${{giftCard.value}} </li>
                                         <li> ID: {{giftCard.id}} </li>
                                         <li> {{giftCard.dateCreated}} </li>
+                                        <li ng-show="!giftCard.redimido">Sin redimir</li>
+                                        <li ng-show="giftCard.redimido">Redimido</li>
                                     </ul>  
                                 </td>
                             </tr>
