--- a/tuMejorOpcion.web/src/main/webapp/partials/login.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/login.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">TuMejorOpcion.com</a>
+            <a class="navbar-brand page-scroll" href="#page-top">TuMejorOpcion</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,6 +20,12 @@
                 </li>
 
 
+                <li ng-show="me">
+                    <a href="#/friends" >Mis Amigos</a>
+                </li>
+                <li ng-show="me">
+                    <a href="#/purchasedGiftCards">Bonos Comprados</a>
+                </li>
 
                 <li>
                     <a class="page-scroll" href="#team">Equipo</a>
@@ -41,17 +47,22 @@
             <div class="intro-heading">BIENVENIDO A TuMejorOpcion.com</div>
 
             <div class ="row">
-                <div class="col-md-4 col-md-offset-4">
+                <div class="col-md-4 col-md-offset-2">
                     <form ng-submit="redirectToFriends()">
 
                         <fb:login-button data-scope="user_friends, user_likes" data-size="xlarge"
-                                         onlogin="" ng-hide="friendsLoaded">
+                                         onlogin="">
                         </fb:login-button>
+
+
 
                     </form>
                 </div>
-            </div>
+                <div class="col-md-4">
+                    <google-plus-signin clientid="663934621056-2spdbhhlit79193qe42bvkt1hjp2f7gd.apps.googleusercontent.com" language="es-419"></google-plus-signin>
+                </div>
 
+            </div>
 
 
         </div>
@@ -65,7 +76,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">EL MEJOR EQUIPO</h2>
                 <h3 class="section-subheading text-muted">LOS 4 FANTÁSTICOS</h3>
-            </div>
+        </div>
         </div>
         <div class="row">
             <div class="col-sm-6">
