--- a/tuMejorOpcion.web/src/main/webapp/partials/giftCards.html
+++ b/tuMejorOpcion.web/src/main/webapp/partials/giftCards.html
@@ -24,12 +24,20 @@
     <!-- Team Section -->
     <section class="bg-light-gray">
         <div class="container">
-            <div class="row">
+            <div class="row" ng-hide="giftCards.length==0">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Parece que a {{selectedFriend.name}} le gustan cosas de las siguientes tiendas asociadas</h2>
+                    
                 </div>
             </div>
-            <div class="row">
+            <div class="row" ng-show="giftCards.length==0">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Parece que a {{selectedFriend.name}} no le gusta ninguna cosa de nuestras tiendas asociadas :(</h2>
+                    <h3 ng-click="redirectToCompletedPurchase()">Puedes intentar con otro amigo haciendo click aquí</h3>
+                </div>
+            </div>
+            
+            <div class="row" ng-hide="giftCards.length==0">
 
                 <div class="col-md-8 col-md-offset-2">
 
@@ -52,14 +60,21 @@
 
                                 <td ng-show="giftCard.selected">
                                     <div style="width: 100%; overflow: hidden;">
+                                        <form name="valueForm">
                                         <div class="input-group" style="width:400px; float: left;">
                                             <span class="input-group-addon">$</span>
-                                            <input type="text" ng-model="formData.value" class="form-control">
+                                            <input name="value"type="number" min="1"  ng-model="formData.value" class="form-control" required>
                                             <span class="input-group-addon">.00</span>
+                                            
                                         </div>
-                                        <div style="margin-left: 25px;">
-                                            <button type="button" class="btn btn-danger" ng-click="giftCard.selected = false">Cerrar</button>
-                                            <button type="button" class="btn btn-primary" ng-click="buySelectedGiftCard(giftCard)">Comprar</button>
+                                        </form>
+                                        <div style="margin-left: 45px;">
+                                            <button ngtype="button" class="btn btn-danger" ng-click="giftCard.selected = false">Cerrar</button>
+                                            <button ng-show="valueForm.$valid" type="button" class="btn btn-primary" ng-click="buySelectedGiftCard(giftCard)">Comprar</button>
+                                            <span class="error" ng-show="valueForm.value.$error.number">
+                                             Ingresa un valor válido</span>
+                                            <span class="error" ng-show="valueForm.value.$error.min">
+                                             Ingresa un valor > a 0</span>
                                         </div>
                                     </div>
 
